@@ -507,4 +507,5 @@
     <string name="open_file_explorer">Open File Explorer</string>
     <string name="comma">,</string>
     <string name="permission_denied">Permission denied</string>
+    <string name="subscriptions">Subscriptions</string>
 </resources>
